--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,37 +1,40 @@
 NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
-SRCS = main.c \
-		src/utils/utils1.c \
-		src/utils/utils2.c \
-		src/utils/utils3.c \
-		src/utils/utils4.c \
-		src/utils/utils5.c \
-		src/utils/utils6.c \
-		src/utils/utils7.c \
-		src/utils/utils8.c \
-		src/utils/utils9.c \
-		src/utils/utils10.c \
-		src/utils/utils11.c \
-		src/ft_printf.c
-INCLUDES = -I header
-OBJ = $(SRCS:.c=.o)
+SRC =\
+        src/utils/utils1.c \
+        src/utils/utils2.c \
+        src/utils/utils3.c \
+        src/utils/utils4.c \
+        src/utils/utils5.c \
+        src/utils/utils6.c \
+        src/utils/utils7.c \
+        src/utils/utils8.c \
+        src/utils/utils9.c \
+        src/utils/utils10.c \
+        src/utils/utils11.c \
+        src/ft_printf.c 		 main.c
+INCLUDES = -I headers
+
+OBJ_DIR = obj
+OBJ = $(addprefix $(OBJ_DIR)/, $(SRC:.c=.o))
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	@$(CC) $(CFLAGS) $(INCLUDES) -o $(NAME) $(OBJ)
+	$(CC) $(CFLAGS) $(INCLUDES) -o $(NAME) $(OBJ)
+
+$(OBJ_DIR)/%.o: %.c
+	@mkdir -p $(dir $@)
+	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
 clean:
-	@rm -f $(OBJ)
+	@rm -rf $(OBJ_DIR)
 
 fclean: clean
-	@rm -f $(NAME)
+	@rm -rf $(NAME)
 
 re: fclean all
-
-%.o: %.c
-	@$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
 test: all
 	@./$(NAME) 5 800 200 200
