--- a/philo/Makefile
+++ b/philo/Makefile
@@ -36,4 +36,7 @@ fclean: clean
 re: fclean all
 
 test: all
-	@./$(NAME) 5 800 200 200 100
+	@./$(NAME) 5 800 200 200 7
+
+e: all
+	@./$(NAME) 5 800 200 200 7 > result.txt && grep eating result.txt | awk '{print $2}' | sort | uniq -c; rm result.txt
