todo norminette and helgrind

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -2,6 +2,12 @@ NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 SRC =	src/main.c \
+		src/actions.c \
+		src/creation.c \
+		src/helpers.c \
+		src/printer.c \
+		src/singleton.c \
+		src/threads.c \
         src/utils/utils1.c \
         src/utils/utils2.c \
         src/utils/utils3.c \
@@ -12,11 +18,13 @@ SRC =	src/main.c \
         src/utils/utils8.c \
         src/utils/utils9.c \
         src/utils/utils10.c \
-        src/utils/utils11.c \
-        src/utils/ft_printf.c
+        src/utils/utils11.c
 INCLUDES = -I headers
 OBJ_DIR = obj
 OBJ = $(addprefix $(OBJ_DIR)/, $(SRC:.c=.o))
+LEAK = valgrind --leak-check=full --show-leak-kinds=all \
+	--trace-children=yes --track-origins=yes -s
+HELL = valgrind --tool=helgrind
 
 all: $(NAME)
 
@@ -40,3 +48,9 @@ test: all
 
 e: all
 	@./$(NAME) 5 800 200 200 7 > result.txt && grep eating result.txt | awk '{print $2}' | sort | uniq -c; rm result.txt
+
+val:
+	$(LEAK) ./$(NAME) 1 800 200 200
+
+hel:
+	$(HELL) ./$(NAME) 2 8100 2000 2000 1
